# styx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_debug.sh  build_release.sh  build_test.sh  clear_jsons.sh  run.sh  run_tests.sh  serverconfig.json  test.sh
include/: cleanup.h  config.h  debug.h  global_types.h  globals.h  handleconn.h  header.h  mem.h  request.h  types.h  utils.h
include/run/: handleconn.h  header.h  request.h  response.h  run.h  state.h
include/setup/: buf.h  config.h  mem.h  setup.h
include/utils/: debug.h  errlog.h  handle_errs.h
src/: cleanup.c  handleconn.c  header.c  main.c  mem.c
src/connection/: handleconn.c  header.c  request.c  response.c
src/memory/: serveraddress.c
src/run/: handleconn.c  header.c  request.c  response.c  run.c
src/setup/: buf.c  config.c  handleargs.c  mem.c  setup.c
src/utils/: config.c  debug.c  errlog.c  error.c  handle_errs.c  handleargs.c  loadconfig.c  signalhandler.c
static/: index.html
test-include/: config.bufsizes.h  config.util.h
tests/: cleanup.test.c  memtest.c
tests/run/: handleconn.test.c  header.test.c  request.test.c  response.test.c  run.test.c
tests/setup/: buf.test.c  config.test.c  configtest.c  mem.test.c  memtest.c  setup.test.c
tests/static/: index.html
tests/test-include/: config.bufsizes.h  config.util.h  connection.util.h
tests/test-utils/: config.util.c  connection.util.c
